--- a/src/components/styles/errorPage.css
+++ b/src/components/styles/errorPage.css
@@ -5,13 +5,13 @@
   margin: auto;
 }
 
-.page-error > h2 {
+.page-error>h2 {
   font-size: 2.3em;
   margin-top: 1%;
   margin-bottom: 1.5%;
 }
 
-.page-error > p {
+.page-error>p {
   font-size: 1.3em;
   margin: 0;
 }
@@ -19,9 +19,20 @@
 .go-home {
   margin-top: 3%;
   display: inline-block;
-  background-color: #6757d8;
+  background-color: #e2e2e2;
   padding: 0.6em 0.5em;
   font-size: 1.5em;
-  color: #ffffff;
+  color: #6757d8;
+  /* box-shadow: inset 0 0 0 2px #6757d8; */
   border-radius: 0.7em;
+}
+
+a:hover {
+  background: #6757d8;
+  color: #e2e2e2;
+  transition: 0.75s;
+}
+
+a:not(:hover){
+  transition: 0.75s;
 }
