--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: 'IBMPlexMono';
   src: local(NotoSerif),
-    url(./fonts/IBMPlexMono-Regular.ttf) format('truetype');
+    url(./assets/fonts/IBMPlexMono-Regular.ttf) format('truetype');
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'IBMPlexMono';
   src: local(NotoSerif),
-    url(./fonts/IBMPlexMono-Bold.ttf) format('truetype');
+    url(./assets/fonts/IBMPlexMono-Bold.ttf) format('truetype');
   font-weight: 700;
 }
 
@@ -22,7 +22,8 @@
 }
 
 html,
-body {
+body,
+#root {
   width: 100%;
   height: 100%;
 }
@@ -31,6 +32,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'IBMPlexMono';
+  background: #e2e2e2;
 }
 
 a {
@@ -41,7 +43,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  background: #e2e2e2;
+
 }
 
 .header-logo {
@@ -49,8 +51,8 @@ a {
   gap: 0.3em;
 }
 
-.header-logo-title {
-  color:black;
+.header-logo > p {
+  color: #39393d;
   font-weight: 700;
   font-size: 1.5em;
 }
@@ -60,8 +62,15 @@ a {
   gap: 2em;
 }
 
-.nav-link{
-  color: gray;
+.nav-link {
+  color: #323542;
   font-size: 1.2em;
 }
 
+.page {
+  max-width: var(--page-max-width);
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
